# AVS

./: README.md  StartMasterStation  startMasterStation
cmd_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cmd_msgs/msg/: cmd.msg
master_station/: CMakeLists.txt  package.xml~
master_station/cfg/: master_station_param.yaml  master_station_param.yaml~
master_station/launch/: master_station.launch
master_station/src/: master_station.cpp
move_controller/: package.xml~
move_controller/cfg/: logging_settings_rosconsole.cfg  move_controller_param.yaml  move_controller_param.yaml~
move_controller/launch/: MasterStation.launch~  move_controller.launch  move_controller.launch~
move_controller/move_controller/: CMakeLists.txt
move_controller/move_controller/cfg/: master_station_param.yaml~
move_controller/move_controller/src/: move_controller.cpp
move_controller/src/: move_controller.cpp
rtimulib_ros/config/: RTIMULib.ini
rtimulib_ros/src/: rtimulib_ros.cpp
